landing page2 complete

--- a/src/components/landing/LandingSecond/LandingSecond.scss
+++ b/src/components/landing/LandingSecond/LandingSecond.scss
@@ -1,56 +1,30 @@
 @media only screen and (min-width: 360px) {
-  .landing {
+  #cam_img {
+    margin-top: 102px;
+    margin-left: 26px;
+    width: 132px;
+    height: 137px;
+  }
+  #main_phrase {
     display: flex;
-    flex-flow: column nowrap;
-    #main_logo {
-      margin-top: 102px;
-      margin-left: 26px;
-      width: 132px;
-      height: 137px;
-    }
-    #main_phrase {
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-between;
-      margin-top: 68px;
-      margin-left: 30px;
-      .phrase1 {
-        width: 243px;
-        height: 74px;
-      }
-      .next_icon {
-        width: 20px;
-        height: 37px;
-        margin-right: 37px;
-        margin-top: 19px;
-      }
-    }
-    .footer {
-      display: flex;
-      flex-flow: row nowrap;
-      position: absolute;
-      width: 100%;
-      bottom: 28px;
-      justify-content: center;
-      .progress_icon {
-        display: block;
-        width: 33px;
-        height: 7px;
-      }
-      .skip_icon {
-        position: absolute;
-        width: 29px;
-        height: 13px;
-        right: 30px;
-        bottom: 1px;
-      }
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    margin-top: 68px;
+    margin-left: 30px;
+    .phrase2 {
+      width: 243px;
+      height: 74px;
     }
   }
 }
 
-.active {
+.nonactive {
   -webkit-animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+.active {
+  -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 /**
  * ----------------------------------------
@@ -81,3 +55,33 @@
     opacity: 0;
   }
 }
+/**
+ * ----------------------------------------
+ * animation slide-in-right
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
