--- a/src/components/landing/LandingFirst/LandingFirst.scss
+++ b/src/components/landing/LandingFirst/LandingFirst.scss
@@ -1,54 +1,24 @@
 @media only screen and (min-width: 360px) {
-  .landing {
+  #main_logo {
+    margin-top: 102px;
+    margin-left: 26px;
+    width: 132px;
+    height: 137px;
+  }
+  #main_phrase {
     display: flex;
-    flex-flow: column nowrap;
-    #main_logo {
-      margin-top: 102px;
-      margin-left: 26px;
-      width: 132px;
-      height: 137px;
-    }
-    #main_phrase {
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-between;
-      margin-top: 68px;
-      margin-left: 30px;
-      .phrase1 {
-        width: 243px;
-        height: 74px;
-      }
-      .next_icon {
-        width: 20px;
-        height: 37px;
-        margin-right: 37px;
-        margin-top: 19px;
-      }
-    }
-    .footer {
-      display: flex;
-      flex-flow: row nowrap;
-      position: absolute;
-      width: 100%;
-      bottom: 28px;
-      justify-content: center;
-      .progress_icon {
-        display: block;
-        width: 33px;
-        height: 7px;
-      }
-      .skip_icon {
-        position: absolute;
-        width: 29px;
-        height: 13px;
-        right: 30px;
-        bottom: 1px;
-      }
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    margin-top: 68px;
+    margin-left: 30px;
+    .phrase1 {
+      width: 243px;
+      height: 74px;
     }
   }
 }
 
-.active {
+.nonactive {
   -webkit-animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: slide-out-left 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
