landing page complte

--- a/src/components/landing/LandingTemplate/LandingTemplate.scss
+++ b/src/components/landing/LandingTemplate/LandingTemplate.scss
@@ -41,6 +41,10 @@
         right: 30px;
         bottom: 1px;
       }
+      #camera_img {
+        background: url("../../../static/1-3/1_3_camera_icon.png") center center no-repeat;
+        width: 100px;
+      }
     }
   }
 }
