--- a/src/components/info/InfoMenu/InfoMenu.scss
+++ b/src/components/info/InfoMenu/InfoMenu.scss
@@ -3,12 +3,22 @@
   flex-flow: row nowrap;
   margin-top: 50px;
   margin-left: 13px;
-  div {
-    margin: 17px;
-    border-bottom: 20px;
-    border-color: #61dafb;
-    font-family: "Avenir-Heavy";
-    font-weight: 600;
-    font-size: 13px;
+  .menu-area {
+    display: flex;
+    flex-flow: column nowrap;
+    div {
+      padding: 17px;
+      font-family: "Avenir-Heavy";
+      font-weight: 600;
+      font-size: 13px;
+    }
+    div.curTab {
+      border-bottom: 5px solid #ff6b01;
+    }
+    img {
+      margin: 0 17px;
+      height: 5px;
+      width: 50px;
+    }
   }
 }
