--- a/src/components/info/InfoTemplate/InfoTemplate.scss
+++ b/src/components/info/InfoTemplate/InfoTemplate.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
   margin-top: 33px;
+  height: 100%;
   #info_exit_area {
     img {
       float: right;
