--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,8 +1,9 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 #textTest {
-  background: url("../static/1_1_text.png") center center no-repeat;
+  background: url("../static/1/1-1/1_1_text.png") center center no-repeat;
   width: 242px;
   height: 74px;
 }
