--- a/src/components/info/MenuAbout/MenuAbout.scss
+++ b/src/components/info/MenuAbout/MenuAbout.scss
@@ -2,4 +2,9 @@
   background: #ff6b06;
   width: 100%;
   height: 100%;
+  font-size: 12px;
+  color: #ffffff;
+  p {
+    margin: 27px 30px;
+  }
 }
