--- a/src/components/info/MenuReview/MenuReview.scss
+++ b/src/components/info/MenuReview/MenuReview.scss
@@ -4,7 +4,7 @@
   width: 100%;
   .footer {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     width: 100%;
     height: 55px;
     background: #ff6b06;
@@ -19,7 +19,7 @@
   #comment-area::placeholder {
     padding-left: 15px;
     font-size: 15px;
-    color: #C0C0C0;
+    color: #c0c0c0;
   }
   #sendIcon {
     position: absolute;
@@ -29,25 +29,29 @@
     height: 18px;
   }
 }
-.rest-area{
+.rest-area {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   margin-top: 5px;
+  margin-bottom: 88px;
   background: lightgray;
-  .box{
-    height: 100px;
+  overflow-y: scroll;
+  .box {
+    min-height: 100px;
     margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left:5px;
-    margin-right:5px;
-    background:white;
-    .nametag{
+    margin-left: 5px;
+    margin-right: 5px;
+    background: white;
+    .nametag {
       margin-top: 10px;
-      margin-left: 24px;  
-      color:#ff6b06;
+      margin-left: 24px;
+      color: #ff6b06;
     }
-    .comment{
+    .comment {
       margin-left: 24px;
       margin-top: 5px;
-      color:black;
+      color: black;
     }
   }
 }
