--- a/src/components/landing/LandingTemplate/LandingTemplate.scss
+++ b/src/components/landing/LandingTemplate/LandingTemplate.scss
@@ -2,6 +2,8 @@
   .landing {
     display: flex;
     flex-flow: column nowrap;
+    width: 100%;
+    height: 100%;
     #main_logo {
       margin-top: 102px;
       margin-left: 26px;
