--- a/src/components/landing/LandingTemplate/LandingTemplate.scss
+++ b/src/components/landing/LandingTemplate/LandingTemplate.scss
@@ -50,11 +50,10 @@
     }
   }
 }
-/*
 #lds-ring {
   display: inline-block;
-  visibility: hidden;
   position: absolute;
+  bottom: 80px;
   z-index: 1000;
   width: 64px;
   height: 64px;
@@ -88,5 +87,4 @@
     transform: rotate(360deg);
   }
 }
-*/
 
