--- a/src/components/info/MenuPicture/MenuPicture.scss
+++ b/src/components/info/MenuPicture/MenuPicture.scss
@@ -13,6 +13,7 @@
   height: 105px;
   margin-bottom: 5px;
   background-color: #999;
+  background-size: cover;
 }
 .cell:nth-child(3n) {
   background-color: #f00;
