Add scrolling to the menu board image

--- a/src/components/ocr/OcrTemplate/OcrTemplate.scss
+++ b/src/components/ocr/OcrTemplate/OcrTemplate.scss
@@ -1,2 +1,14 @@
 .OcrTemplate {
+  .bounding-wrapper {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: scroll;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
 }
