--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-html, body { height:100%; overflow:hidden }
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -14,8 +18,5 @@ code {
 }
 
 #root {
-  height: 100%;
-}
-.App {
   height: 100%;
 }
